# eventus

./: .gitignore  .gitignore.txt  LICENSE  README.md  REPRODUCING.md  ch06_tree.txt  count_distribution_collection.py  count_distribution_fitter_gp.py  count_distribution_fitter_hurdle.py  count_distribution_fitter_mixture.py  count_distribution_fitter_zip.py  count_distribution_fitters.py  count_distribution_menu.py  count_distributions.py  counts_fit_result.py  covariate_semantics.py  ed_events_dataframe.py  event_semantics.py  events.py  events_comparer.py  events_dataframe.py  events_merger.py  events_per_entity.py  events_utils.py  events_with_covariates.py  events_within_span_analyzer.py  events_within_span_analyzer_utils.py  eventus_architecture.pptx  files.txt  files_check.txt  inpatient_and_ed_handler.py  inpatient_events_dataframe.py  intervals_functions.py  occurrence_semantics.py  occurrences.py  occurrences_per_entity.py  occurrences_utils.py  occurrences_within_spans_analyzer.py  palette.yaml  pipe_delimited_intermediate.py  (+18 more)
analyzers/: event_duration_analyzer.py  events_cleaner.py  events_cleaner_config.py  events_duration_utils.py  events_within_obs_period_analyzer_utils.py  events_within_obs_periods_analyzer.py  occurrences_cleaner.py  occurrences_within_obs_periods_analyzer.py
cleaners/: events_cleaner.py  occurrences_cleaner_config.py
count_classes/: count_regression_distribution_hurdle.py  count_regression_distribution_mixture.py  count_regression_distributions.py  count_regression_spec_hurdle.py  count_regression_spec_mixture.py  (+2 more)
old/: track_time.py  (+3 more)
(+418 files in other folders)
