[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventus"
version = "0.1.0"
description = "A domain-agnostic Python framework for analyzing entities that experience events within defined observation periods."
readme = "README.md"
requires-python = ">=3.12.0"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
